Implement API Endpoint to GET Provisioned Projects (#242)
* add requested endpoints for bot

* remove incorrect meta data

* change action name to sync

* refactor so getDefaultCluster and isNamespaceSetProvisioned can be reused

* update unit tests

* update api doc

* add newline at end of file at api/src/router/routes/provision.ts
