# api/doc/api.yaml
@@ -455,6 +455,51 @@ paths:
           description: The request was received but incorrect
         500:
           description: Internal Error
+  /api/v1/provision/sync/provisioned-profile-ids:
+    get:
+      operationId: getAllProvisionedProfileIds
+      summary: Fetch a list of provisioned profile ids
+      description: |-
+        Used by bot to fetch a list of provisioned profile ids.
+        The definition of provisioned for a given profile is that
+        all 4 namespaces in default cluster are provisioned.
+      tags:
+        - Provision
+      responses:
+        200:
+          description: The request was successful
+          content:
+            application/json:
+              schema:
+                type: array
+        500:
+          description: Internal Error
+  /api/v1/provision/sync/{profileId}/provisioned-profile-bot-json:
+    get:
+      operationId: getProvisionedProfileBotJson
+      summary: Fetch a list of quota-edit options for given clusternamespaces
+      description: |-
+        Used by bot to fetch the JSON/NATS message for the provisioned profile
+        given the profile id without any pending changes.
+      tags:
+        - Provision
+      parameters:
+        - name: profileId
+          description: |-
+            The ID of the provisioned profile that is being requested.
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          description: The request was successful
+          content:
+            application/json:
+              schema:
+                type: array
+        500:
+          description: Internal Error
 components:
   schemas:
     Cluster:
